# keyword-frequency-utils

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LLM_RUNBOOK.md  POLICY.md  README.md  pyproject.toml  run.py
keyword_utils.egg-info/: PKG-INFO
scripts/: archive-workflows.sh  install-hooks.sh  local_ci.sh
scripts/git-hooks/: pre-push
tests/: test_run_keywords.py
